--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
+    "@mui/x-charts": "^6.19.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18"
