--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
     "@mui/x-charts": "^6.19.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "mongoose": "^8.1.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
@@ -22,12 +25,15 @@
     "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
+    "jest": "^29.7.0",
     "postcss": "^8",
     "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
