--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "npx jest"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -34,6 +35,8 @@
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "jest": "^29.7.0",
+    "jest-environment-node": "^29.7.0",
+    "mongodb-memory-server": "^9.1.6",
     "postcss": "^8",
     "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
