--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@mui/x-charts": "^6.19.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
+    "crypto-js": "^4.2.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "mongoose": "^8.1.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
@@ -27,19 +30,24 @@
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/crypto-js": "^4.2.2",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.0",
     "eslint-config-next": "14.0.4",
+    "eslint-plugin-unused-imports": "^3.1.0",
     "jest": "^29.7.0",
     "jest-environment-node": "^29.7.0",
     "mongodb-memory-server": "^9.1.6",
     "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-eslint": "^16.3.0",
     "sass": "^1.69.7",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript": "^4.9.5"
   }
 }
