--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "crypto-js": "^4.2.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "gridstack": "^10.1.2",
     "mongoose": "^8.1.2",
     "next": "14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-grid-layout": "^1.4.4",
     "react-hook-form": "^7.50.1"
   },
   "devDependencies": {
@@ -35,6 +37,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-grid-layout": "^1.3.5",
     "@typescript-eslint/parser": "^5.62.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8.57.0",
