--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@fontsource/roboto": "^5.0.8",
     "@mui/icons-material": "^5.15.4",
     "@mui/material": "^5.15.4",
-    "@mui/x-charts": "^6.19.1",
+    "@mui/x-charts": "^7.4.0",
+    "@mui/x-data-grid": "^7.4.0",
     "@wojtekmaj/react-datetimerange-picker": "^5.5.0",
     "aws4": "^1.12.0",
     "bcrypt": "^5.1.1",
@@ -25,7 +26,7 @@
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "gridstack": "^10.1.2",
     "mongoose": "^8.1.2",
-    "next": "14.0.4",
+    "next": "^14.2.3",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
